scrollbar: fixes continuation scrolling for iOS
The -webkit-overflow-scrolling is an iOS only property:

https://developer.mozilla.org/en-US/docs/Web/CSS/-webkit-overflow-scrolling

that turns on momementum/continuation scrolling for iOS devices. This means
that when swiping, the scroll continues for a half second rather than instantly
stopping the scroll when the user lifts their finger from the screen.

--- a/public/sass/layout/_page.scss
+++ b/public/sass/layout/_page.scss
@@ -28,6 +28,7 @@
   width: 100%;
   overflow: auto;
   height: 100%;
+  -webkit-overflow-scrolling: touch;
 
   &--dashboard {
     height: calc(100% - 56px);
